[package]
name = "image_bed"
version = "0.1.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = { version = "0.45", features = ["rustls"], default-features = false }
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
hyper = { version = "0.13", features = ["stream"] }
futures-util = "0.3"
anyhow = "1.0"
hex = "0.4"
md-5 = "0.9"
async-trait = "0.1"
bytes = "0.5"
rusoto_core = { version = "0.45", default-features = false }
thiserror = "1.0"
sha2 = "0.9"
chrono = "0.4"
structopt = { version = "0.3", features = ["color", "suggestions"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rand = "0.8"
slog = "2.7"
slog-json = "2.3"
once_cell = "1.5"

[dependencies.sqlx]
version = "0.4"
features = ["runtime-tokio-rustls", "postgres"]
